# diffcore-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: bvp.h  conditions.h  diffscheme.h  interpolate.h  plot.h
src/: bvp.cpp  conditions.cpp  diffsheme.cpp  interpolate.cpp
